package org.example.MovieBookingSystem.delegate;

import java.math.BigDecimal;

public class PaymentService {
    public boolean pay(BigDecimal amount) {
        return true;
    }
}
