package org.example.MovieBookingSystem.entities;

public enum SeatStatus {
    AVAILABLE,
    HELD,
    BOOKED
}
