package org.example.MovieBookingSystem.entities;

import java.math.BigDecimal;

public class Ticket {
    private Screening screening;
    private Seat seat;
    private BigDecimal price;

    public Ticket(Screening screening, Seat seat, BigDecimal price) {
        this.screening = screening;
        this.seat = seat;
        this.price = price;
    }

    public Screening getScreening() {
        return screening;
    }

    public Seat getSeat() {
        return seat;
    }

    public BigDecimal getPrice() {
        return price;
    }
}
