package org.example.MovieBookingSystem.strategy;

import java.math.BigDecimal;

public interface PricingStrategy {
    BigDecimal getPrice();
}
